[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fontes/Bloody terror TTF.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/startScreen.gd" type="Script" id=2]
[ext_resource path="res://Interface/telainicial.png" type="Texture" id=3]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=6]
Button/styles/disabled = null
Button/styles/focus = SubResource( 2 )
Button/styles/hover = SubResource( 3 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 21
font_data = ExtResource( 1 )

[node name="startScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -126.0
margin_top = -82.0
margin_right = 88.0
margin_bottom = 209.0

[node name="jogar" type="Button" parent="VBoxContainer"]
margin_right = 214.0
margin_bottom = 55.0
focus_neighbour_top = NodePath("../sair")
theme = SubResource( 6 )
custom_colors/font_color = Color( 0.984314, 0.239216, 0.0352941, 1 )
custom_colors/font_color_hover = Color( 0.803922, 0.105882, 0.878431, 1 )
custom_colors/font_color_pressed = Color( 0.227451, 0.768627, 0.101961, 1 )
custom_fonts/font = SubResource( 1 )
text = "JOGAR"

[node name="controles" type="Button" parent="VBoxContainer"]
margin_top = 59.0
margin_right = 214.0
margin_bottom = 114.0
theme = SubResource( 6 )
custom_colors/font_color = Color( 0.984314, 0.239216, 0.0352941, 1 )
custom_colors/font_color_hover = Color( 0.803922, 0.105882, 0.878431, 1 )
custom_colors/font_color_pressed = Color( 0.227451, 0.768627, 0.101961, 1 )
custom_fonts/font = SubResource( 1 )
text = "CONTROLES"

[node name="historiaJogo" type="Button" parent="VBoxContainer"]
margin_top = 118.0
margin_right = 214.0
margin_bottom = 173.0
theme = SubResource( 6 )
custom_colors/font_color = Color( 0.984314, 0.239216, 0.0352941, 1 )
custom_colors/font_color_hover = Color( 0.803922, 0.105882, 0.878431, 1 )
custom_colors/font_color_pressed = Color( 0.227451, 0.768627, 0.101961, 1 )
custom_fonts/font = SubResource( 1 )
text = "HISTÓRIA DO JOGO"

[node name="creditos" type="Button" parent="VBoxContainer"]
margin_top = 177.0
margin_right = 214.0
margin_bottom = 232.0
theme = SubResource( 6 )
custom_colors/font_color = Color( 0.984314, 0.239216, 0.0352941, 1 )
custom_colors/font_color_hover = Color( 0.803922, 0.105882, 0.878431, 1 )
custom_colors/font_color_pressed = Color( 0.227451, 0.768627, 0.101961, 1 )
custom_fonts/font = SubResource( 1 )
text = "CRÉDITOS"

[node name="sair" type="Button" parent="VBoxContainer"]
margin_top = 236.0
margin_right = 214.0
margin_bottom = 291.0
focus_neighbour_bottom = NodePath("../jogar")
theme = SubResource( 6 )
custom_colors/font_color = Color( 0.984314, 0.239216, 0.0352941, 1 )
custom_colors/font_color_hover = Color( 0.803922, 0.105882, 0.878431, 1 )
custom_colors/font_color_pressed = Color( 0.227451, 0.768627, 0.101961, 1 )
custom_fonts/font = SubResource( 1 )
text = "SAIR"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 76.0
margin_top = 1.0
margin_right = 696.0
margin_bottom = 431.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )

[connection signal="pressed" from="VBoxContainer/jogar" to="." method="_on_jogar_pressed"]
[connection signal="pressed" from="VBoxContainer/controles" to="." method="_on_controles_pressed"]
[connection signal="pressed" from="VBoxContainer/historiaJogo" to="." method="_on_historiaJogo_pressed"]
[connection signal="pressed" from="VBoxContainer/creditos" to="." method="_on_creditos_pressed"]
[connection signal="pressed" from="VBoxContainer/sair" to="." method="_on_sair_pressed"]
